--- a/app/page.module.css
+++ b/app/page.module.css
@@ -6,14 +6,16 @@
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
 
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
+  display: flex;
   align-items: center;
-  justify-items: center;
-  min-height: 100svh;
+  min-height: 100vh;
   padding: 80px;
-  gap: 64px;
   font-family: var(--font-geist-sans);
+  background-color: white;
+  color: #000000;
+ flex-direction: column;
+ justify-content: space-between;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,11 +31,18 @@
 
 .main {
   display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
+  flex-direction: row;
+  align-items: center;
+  gap: 62px;
+  height: 100%;
+  flex-wrap: wrap;
+  
 }
-
+.Logo_box{
+  /* align-self: start;
+  display: flex;
+  width: 100%; */
+}
 .main ol {
   font-family: var(--font-geist-mono);
   padding-left: 0;
@@ -47,122 +56,55 @@
 .main li:not(:last-of-type) {
   margin-bottom: 8px;
 }
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
+.box{
   display: flex;
-  gap: 16px;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+  min-height: 15rem;
+  padding-left: 20px;
+  border-left:4px #f30000 solid;
+
+}
+.head{
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: monospace;
+}
+.note{
+  width: 29rem;
+  font-size: 14px;
+  line-height: 1.6;
+  font-family: monospace;
+  font-weight: 300;
+  margin-top: 30px;
 }
 
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
+.p{
+  padding-bottom: 10px;
+}
+
+.btns{
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
+  flex-direction: row;
+  gap: 20px;
+  justify-items: end;
+  font-family: monospace;
+  margin-top: 50px;
 }
 
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
+.btns_1, .btns_2{
+  background: rgb(3, 3, 3) !important;
+  padding: .5rem 1.5rem;
+  border: 2px solid #000000 !important;
+  font-size: 11px;
+  color: #ccc;
+
+}
+.btns_1:hover , .btns_2:hover{
+  background: rgb(255, 252, 252) !important;
+  border: 2px solid #000000 !important;
+  color: #000000;
+  font-weight: bolder;
 }
 
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 158px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
-}
